sumo/tests/traci/VariableRetrieval/Vehicle/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 164 255 dummy
simstep 6 1
